feat: add modules src

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,12 +8,7 @@ repos:
     rev: 24.1.1
     hooks:
       - id: black
-
-  - repo: https://github.com/pycqa/isort
-    rev: 5.11.2
-    hooks:
-      - id: isort
-        name: isort (python)
+        language_version: python3.11
 
   - repo: local
     hooks:
