--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,26 @@
 astroid==3.0.3
 black==24.2.0
+cfgv==3.4.0
 click==8.1.7
 colorama==0.4.6
 dill==0.3.8
+distlib==0.3.8
+filelock==3.13.1
 flake8==7.0.0
+identify==2.5.34
 isort==5.13.2
 mando==0.7.1
 mccabe==0.7.0
 mypy-extensions==1.0.0
+nodeenv==1.8.0
 packaging==23.2
 pathspec==0.12.1
 platformdirs==4.2.0
+pre-commit==3.6.1
 pycodestyle==2.11.1
 pyflakes==3.2.0
 pylint==3.0.3
+PyYAML==6.0.1
 six==1.16.0
 tomlkit==0.12.3
+virtualenv==20.25.0
