--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,3 +33,13 @@ repos:
         language: system
         pass_filenames: false
         stages: [commit]
+
+  - repo: local
+    hooks:
+    - id: pytest
+      name: pytest
+      entry: make test
+      language: system
+      types: [python]
+      pass_filenames: false
+      stages: [commit]
